--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
     </form>
 
     <div class="links">
-      <a href="/forgot-password">Forgot Password?</a>
-      <a href="/register">Register</a>
+      <a href="forgotpassword.html">Forgot Password?</a>
+      <!-- Updated Register link -->
+      <a href="register.html">Register</a>
     </div>
 
     <div class="description">
