--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Login - Attendance System</title>
+  <title>ATTENDANCE</title>
+
+  <!-- Favicon / Logo -->
+  <link rel="icon" type="image/png" href="image/attendancelogo.png" />
+
   <style>
     * {
       box-sizing: border-box;
