--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Forgot Password - Attendance System</title>
+
+<!-- Favicon -->
+<link rel="icon" type="image/png" href="image/attendancelogo.png" />
+
 <style>
   * { box-sizing: border-box; }
   body, html {
