--- a/register.html
+++ b/register.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Register - Attendance System</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="image/attendancelogo.png" />
+
   <style>
+    /* your existing CSS stays the same */
     * { box-sizing: border-box; }
     body, html {
       margin: 0; padding: 0; height: 100%;
