--- a/home.html
+++ b/home.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Dashboard - Attendance System</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ATTENDANCE</title>
+
+  <!-- Favicon / Logo -->
+  <link rel="icon" type="image/png" href="image/attendancelogo.png" />
+ 
 <style>
   * { box-sizing: border-box; }
   body, html {
