--- a/home.html
+++ b/home.html
@@ -148,13 +148,13 @@
 </header>
 
 <nav class="sidebar" id="sidebar">
-  <a href="#" data-page="home" class="active">HOME</a>
-  <a href="#" data-page="profile">PROFILE</a>
-  <a href="#" data-page="payroll">PAYROLL</a>
-  <a href="#" data-page="friendlist">FRIENDLIST</a>
-  <a href="#" data-page="mailbox">MAILBOX</a>
-  <a href="#" data-page="notification">NOTIFICATION</a>
-  <button class="logout-btn" id="logoutBtn">LOGOUT</button>
+  <a href="home.html">HOME</a>
+  <a href="profile.html">PROFILE</a>
+  <a href="payroll.html">PAYROLL</a>
+  <a href="friendlist.html">FRIENDLIST</a>
+  <a href="mailbox.html">MAILBOX</a>
+  <a href="notification.html">NOTIFICATION</a>
+  <button class="logout-btn" id="logoutBtn">LOG OUT</button>
 </nav>
 
 <main class="content" id="contentArea">
