--- a/notification.html
+++ b/notification.html
@@ -202,7 +202,7 @@
   <a href="payroll.html">PAYROLL</a>
   <a href="friendlist.html">FRIENDLIST</a>
   <a href="mailbox.html">MAILBOX</a>
-  <a href="notification.html" class="active">NOTIFICATION</a>
+  <a href="notification.html">NOTIFICATION</a>
   <button class="logout-btn" id="logoutBtn">LOG OUT</button>
 </nav>
 
