--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ATTENDANCEm</title>
+<title>ATTENDANCE</title>
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="image/attendancelogo.png" />
