--- a/profile.html
+++ b/profile.html
@@ -105,69 +105,69 @@
     }
     nav.sidebar button.logout-btn { margin-top: auto; width: 100%; }
 
-    /* Mailbox Container */
+    /* Profile Container */
     .container {
         background: #fff;
         border-radius: 12px;
-        max-width: 900px;
+        max-width: 650px;
         margin: 100px auto 30px auto;
-        padding: 20px;
+        padding: 30px;
         box-shadow: 0 8px 24px rgba(0,0,0,0.15);
         transition: margin-left 0.3s ease;
     }
     .container.shifted { margin-left: 270px; }
 
-    h2 {
-        margin-bottom: 15px;
-        font-size: 1.5rem;
+    .profile-header {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 25px;
+    }
+    .profile-header img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border: 4px solid #000dff;
+        object-fit: cover;
+    }
+    .profile-header h2 {
+        margin: 0;
+        font-size: 1.6rem;
         color: #333;
     }
 
-    /* Mail Item */
-    .mail {
-        background: #f9f9f9;
-        padding: 14px;
-        border-radius: 8px;
-        margin-bottom: 12px;
+    .profile-details {
+        margin-top: 15px;
+    }
+    .profile-details p {
+        font-size: 1rem;
+        margin: 10px 0;
+        color: #444;
+    }
+    .profile-details strong {
+        color: #000dff;
+    }
+
+    .edit-btn {
+        display: inline-block;
+        margin-top: 25px;
+        padding: 10px 20px;
+        background: #000dff;
+        color: #fff;
+        border: none;
+        border-radius: 6px;
+        font-weight: bold;
         cursor: pointer;
         transition: background 0.3s;
     }
-    .mail:hover { background: #eef4ff; }
-    .mail.unread { font-weight: bold; background: #e6f0ff; }
-
-    .mail-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .edit-btn:hover {
+        background: #4b5eff;
     }
-    .mail-info {
-        display: flex;
-        flex-direction: column;
-    }
-    .mail-title { font-size: 1rem; }
-    .mail-time { font-size: 0.8rem; color: gray; }
-    .delete-btn {
-        background: none;
-        border: none;
-        font-size: 1.2rem;
-        color: red;
-        cursor: pointer;
-    }
-    .delete-btn:hover { transform: scale(1.2); }
-
-    /* Expanded content */
-    .mail-body {
-        margin-top: 10px;
-        font-size: 0.95rem;
-        color: #333;
-        display: none;
-        line-height: 1.4;
-    }
-    .mail.open .mail-body { display: block; }
 
     @media (max-width: 720px) {
         .container.shifted { margin-left: 0; }
         nav.sidebar { width: 220px; }
+        .profile-header { flex-direction: column; text-align: center; }
     }
 </style>
 </head>
@@ -185,75 +185,26 @@
   <a href="profile.html">PROFILE</a>
   <a href="payroll.html">PAYROLL</a>
   <a href="friendlist.html">FRIENDLIST</a>
-  <a href="mailbox.html" class="active">MAILBOX</a>
+  <a href="mailbox.html">MAILBOX</a>
   <a href="notification.html">NOTIFICATION</a>
-  <button class="logout-btn" id="logoutBtn">LOG OUT</button>
+  <a href="index.html">LOG OUT</a>
 </nav>
 
-<!-- Mailbox Container -->
+<!-- Profile Content -->
 <div class="container" id="contentArea">
-    <h2>Mailbox</h2>
-
-    <div id="mails">
-        <div class="mail unread" onclick="toggleMail(this)">
-            <div class="mail-header">
-                <div class="mail-info">
-                    <div class="mail-title">HR: Your leave request has been approved</div>
-                    <div class="mail-time">10 mins ago</div>
-                </div>
-                <button class="delete-btn" onclick="event.stopPropagation(); deleteMail(this)">❌</button>
-            </div>
-            <div class="mail-body">
-                Dear Employee,<br><br>
-                Your recent leave request has been reviewed and approved by HR. Please ensure you file your attendance properly before and after your leave period.<br><br>
-                Regards,<br>HR Department
-            </div>
-        </div>
-
-        <div class="mail unread" onclick="toggleMail(this)">
-            <div class="mail-header">
-                <div class="mail-info">
-                    <div class="mail-title">System Reminder: Attendance cutoff Sept 5, 2025</div>
-                    <div class="mail-time">30 mins ago</div>
-                </div>
-                <button class="delete-btn" onclick="event.stopPropagation(); deleteMail(this)">❌</button>
-            </div>
-            <div class="mail-body">
-                Reminder: Please ensure all attendance logs are submitted and corrected before the cutoff date, Sept 5, 2025. Missing logs will not be counted in payroll.<br><br>
-                System Administrator
-            </div>
-        </div>
-
-        <div class="mail" onclick="toggleMail(this)">
-            <div class="mail-header">
-                <div class="mail-info">
-                    <div class="mail-title">Payroll Department: Payslip available for August</div>
-                    <div class="mail-time">Yesterday</div>
-                </div>
-                <button class="delete-btn" onclick="event.stopPropagation(); deleteMail(this)">❌</button>
-            </div>
-            <div class="mail-body">
-                Dear Employee,<br><br>
-                Your payslip for the month of August 2025 is now available in the payroll section of the Attendance System. Please review carefully and report discrepancies to Payroll within 3 working days.<br><br>
-                Payroll Department
-            </div>
-        </div>
-
-        <div class="mail" onclick="toggleMail(this)">
-            <div class="mail-header">
-                <div class="mail-info">
-                    <div class="mail-title">HR: Staff meeting scheduled Sept 10, 2025</div>
-                    <div class="mail-time">2 days ago</div>
-                </div>
-                <button class="delete-btn" onclick="event.stopPropagation(); deleteMail(this)">❌</button>
-            </div>
-            <div class="mail-body">
-                Attention all employees:<br><br>
-                A general staff meeting will be held on Sept 10, 2025 at 10:00 AM in the conference hall. Attendance is mandatory.<br><br>
-                Regards,<br>HR Team
-            </div>
-        </div>
+    <div class="profile-header">
+        <img src="https://via.placeholder.com/100" alt="Profile Picture">
+        <h2>@username123</h2>
     </div>
+    <div class="profile-details">
+        <p><strong>Full Name:</strong> John Doe</p>
+        <p><strong>Birthdate:</strong> January 15, 1995</p>
+        <p><strong>Gender:</strong> Male</p>
+        <p><strong>Department:</strong> IT Department</p>
+        <p><strong>Email:</strong> john.doe@example.com</p>
+        <p><strong>Employee ID:</strong> EMP-12345</p>
+    </div>
+    <button class="edit-btn" onclick="alert('Edit Profile feature coming soon!')">Edit Profile</button>
 </div>
 
 <script>
@@ -277,17 +228,6 @@ logoutBtn.addEventListener('click', () => {
     window.location.href = "index.html";
   }
 });
-
-// Toggle Mail
-function toggleMail(mailElement) {
-    mailElement.classList.toggle('open');
-    mailElement.classList.remove('unread');
-}
-
-// Delete Mail
-function deleteMail(btn) {
-    btn.closest('.mail').remove();
-}
 </script>
 
 </body>
