--- a/profile.html
+++ b/profile.html
@@ -187,7 +187,7 @@
   <a href="friendlist.html">FRIENDLIST</a>
   <a href="mailbox.html">MAILBOX</a>
   <a href="notification.html">NOTIFICATION</a>
-  <a href="index.html">LOG OUT</a>
+  <button class="logout-btn" id="logoutBtn">LOG OUT</button>
 </nav>
 
 <!-- Profile Content -->
