--- a/notification.html
+++ b/notification.html
@@ -193,7 +193,7 @@
   <div class="hamburger" id="hamburger">
     <div></div><div></div><div></div>
   </div>
-  <div class="site-title">Attendance System</div>
+  <div class="site-title">Notification</div>
 </header>
 
 <nav class="sidebar" id="sidebar">
