--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@
   <div class="hamburger" id="hamburger" aria-label="Toggle menu" role="button" tabindex="0">
     <div></div><div></div><div></div>
   </div>
-  <div class="site-title">Attendance System</div>
+  <div class="site-title">Home</div>
 </header>
 
 <nav class="sidebar" id="sidebar">
