--- a/mailbox.html
+++ b/mailbox.html
@@ -177,7 +177,7 @@
   <div class="hamburger" id="hamburger">
     <div></div><div></div><div></div>
   </div>
-  <div class="site-title">Attendance System</div>
+  <div class="site-title">Mailbox</div>
 </header>
 
 <nav class="sidebar" id="sidebar">
