--- a/friendlist.html
+++ b/friendlist.html
@@ -197,7 +197,7 @@
 
 <header>
   <div class="hamburger" id="hamburger"><div></div><div></div><div></div></div>
-  <div class="site-title">Attendance System</div>
+  <div class="site-title">Friend List</div>
 </header>
 
 <nav class="sidebar" id="sidebar">
