--- a/home.html
+++ b/home.html
@@ -154,6 +154,7 @@
   <a href="friendlist.html">FRIENDLIST</a>
   <a href="mailbox.html">MAILBOX</a>
   <a href="notification.html">NOTIFICATION</a>
+  <a href="department.html">DEPARTMENT</a>
   <button class="logout-btn" id="logoutBtn">LOG OUT</button>
 </nav>
 
