--- a/mailbox.html
+++ b/mailbox.html
@@ -187,6 +187,7 @@
   <a href="friendlist.html">FRIENDLIST</a>
   <a href="mailbox.html" class="active">MAILBOX</a>
   <a href="notification.html">NOTIFICATION</a>
+  <a href="department.html">DEPARTMENT</a>
   <button class="logout-btn" id="logoutBtn">LOG OUT</button>
 </nav>
 
