--- a/friendlist.html
+++ b/friendlist.html
@@ -207,6 +207,7 @@
   <a href="friendlist.html" class="active">FRIENDLIST</a>
   <a href="mailbox.html">MAILBOX</a>
   <a href="notification.html">NOTIFICATION</a>
+  <a href="department.html">DEPARTMENT</a>
   <button class="logout-btn" onclick="window.location.href='index.html'">LOG OUT</button>
 </nav>
 
