--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ATTENDANCE</title>
+  <title>ChronoPay</title>
 
   <!-- Favicon / Logo -->
   <link rel="icon" type="image/png" href="image/attendancelogo.png" />
@@ -144,7 +144,7 @@
   <div class="hamburger" id="hamburger" aria-label="Toggle menu" role="button" tabindex="0">
     <div></div><div></div><div></div>
   </div>
-  <div class="site-title">Home</div>
+  <div class="site-title">ChronoPay</div>
 </header>
 
 <nav class="sidebar" id="sidebar">
