--- a/friendlist.html
+++ b/friendlist.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ATTENDANCE</title>
+  <title>ChronoPay</title>
   <!-- Favicon / Logo -->
   <link rel="icon" type="image/png" href="image/attendancelogo.png" />
  
