--- a/mailbox.html
+++ b/mailbox.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ATTENDANCE</title>
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>ChronoPay</title>
+ 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="image/attendancelogo.png" />
 
