--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ATTENDANCE</title>
+  <link rel="icon" type="image/png" href="image/attendancelogo.png">
+  <title>ChronoPay</title>
 
   <!-- Favicon / Logo -->
   <link rel="icon" type="image/png" href="image/attendancelogo.png" />
@@ -152,7 +153,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Attendance System</h1>
+    <h1>Homepage - Login</h1>
 
     <form action="/login" method="POST">
       <label for="username">Username</label>
