--- a/mailbox.html
+++ b/mailbox.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ChronoPay</title>
- 
-<!-- Favicon -->
-<link rel="icon" type="image/png" href="image/attendancelogo.png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="image/attendancelogo.png">
+  <title>ChronoPay</title>
+
+  <!-- Favicon / Logo -->
+  <link rel="icon" type="image/png" href="image/attendancelogo.png" />
 
 <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
