--- a/notification.html
+++ b/notification.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ATTENDANCE</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="image/attendancelogo.png">
+  <title>ChronoPay</title>
 
-<!-- Favicon / Logo -->
-<link rel="icon" type="image/png" href="image/attendancelogo.png" />
+  <!-- Favicon / Logo -->
+  <link rel="icon" type="image/png" href="image/attendancelogo.png" />
 
 <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
