--- a/register.html
+++ b/register.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="UTF-8">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ATTENDANCE</title>
+  <link rel="icon" type="image/png" href="image/attendancelogo.png">
+  <title>ChronoPay</title>
 
-  <!-- Favicon -->
+  <!-- Favicon / Logo -->
   <link rel="icon" type="image/png" href="image/attendancelogo.png" />
 
   <style>
