--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>ATTENDANCE</title>
+<meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="image/attendancelogo.png">
+  <title>ChronoPay</title>
 
-<!-- Favicon -->
-<link rel="icon" type="image/png" href="image/attendancelogo.png" />
+  <!-- Favicon / Logo -->
+  <link rel="icon" type="image/png" href="image/attendancelogo.png" />
 
 <style>
   * { box-sizing: border-box; }
