--- a/profile.html
+++ b/profile.html
@@ -3,10 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="image/attendancelogo.png">
 <title>ATTENDANCE</title>
-
-<!-- Favicon -->
-<link rel="icon" type="image/png" href="image/attendancelogo.png" />
 
 <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
