--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="image/attendancelogo.png">
+  
+  <!-- Favicons (works better across browsers/devices) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
+  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
+
   <title>Homepage - Login</title>
 
   <style>
@@ -70,6 +75,15 @@
       text-align: center;
       margin-bottom: 25px;
       color: #2c3e50;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+    }
+
+    h1 img {
+      width: 32px;
+      height: 32px;
     }
 
     form {
@@ -150,7 +164,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Homepage - Login</h1>
+    <h1>
+      <img src="image/attendancelogo.png" alt="Logo"> Homepage - Login
+    </h1>
 
     <form action="/login" method="POST">
       <label for="username">Username</label>
