--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <!-- Favicons (works better across browsers/devices) -->
   <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
@@ -164,16 +162,13 @@
 </head>
 <body>
   <div class="container">
-    <h1>
-      <img src="image/attendancelogo.png" alt="Logo"> Homepage - Login
-    </h1>
-
+    <h1>Login</h1>
     <form action="/login" method="POST">
       <label for="username">Username</label>
-      <input type="text" id="username" name="username" placeholder="Enter your username" required />
+      <input type="text" id="username" name="username" placeholder="Enter your username" required="">
 
       <label for="password">Password</label>
-      <input type="password" id="password" name="password" placeholder="Enter your password" required />
+      <input type="password" id="password" name="password" placeholder="Enter your password" required="">
 
       <button type="submit">Login</button>
     </form>
@@ -194,5 +189,6 @@
       </p>
     </div>
   </div>
-</body>
-</html>
+
+
+</body></html>
