--- a/home.html
+++ b/home.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="image/attendancelogo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Favicons (works better across browsers/devices) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
+  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
   <title>ChronoPay</title>
 
   <!-- Favicon / Logo -->
