--- a/department.html
+++ b/department.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Favicons (works better across browsers/devices) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
+  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
+  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
   <title>Departments</title>
-  <link rel="icon" type="image/png" href="image/attendancelogo.png">
   <style>
     /* --- your existing styles unchanged --- */
     * { box-sizing: border-box; }
