--- a/department-details.html
+++ b/department-details.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
   <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
   <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
-  <title>Department Details</title>
+  <title>ChronoPay</title>
   <style>
     * { box-sizing: border-box; }
     body, html {
