--- a/department.html
+++ b/department.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
   <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
   <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
-  <title>Departments</title>
+  <title>ChronoPay</title>
   <style>
     /* --- your existing styles unchanged --- */
     * { box-sizing: border-box; }
