--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
   <title>Homepage - Register</title>
 
   <style>
-    /* your existing CSS stays the same */
+    /* ORIGINAL CSS KEPT INTACT */
     * { box-sizing: border-box; }
     body, html {
       margin: 0; padding: 0; height: 100%;
@@ -52,154 +52,54 @@
       position: relative;
       z-index: 1;
     }
-    h1 {
-      text-align: center;
-      margin-bottom: 25px;
-      color: #2c3e50;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-    }
-    label {
-      margin-bottom: 8px;
-      font-weight: 600;
-      font-size: 0.9rem;
-    }
+    h1 { text-align: center; margin-bottom: 25px; color: #2c3e50; }
+    form { display: flex; flex-direction: column; }
+    label { margin-bottom: 8px; font-weight: 600; font-size: 0.9rem; }
     input[type="text"],
     input[type="email"],
     input[type="password"],
     input[type="tel"],
     input[type="date"] {
-      padding: 10px;
-      margin-bottom: 18px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-      transition: border-color 0.3s;
+      padding: 10px; margin-bottom: 18px; border-radius: 6px;
+      border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
     }
-    input:focus {
-      border-color: #007bff;
-      outline: none;
-    }
+    input:focus { border-color: #007bff; outline: none; }
     button {
-      padding: 12px;
-      background-color: #007bff;
-      border: none;
-      border-radius: 6px;
-      color: white;
-      font-size: 1rem;
-      cursor: pointer;
-      margin-bottom: 20px;
-      transition: background-color 0.3s;
+      padding: 12px; background-color: #007bff; border: none;
+      border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
+      margin-bottom: 20px; transition: background-color 0.3s;
     }
-    button:hover {
-      background-color: #0056b3;
-    }
-    .links {
-      text-align: center;
-      font-size: 0.9rem;
-      margin-bottom: 25px;
-    }
-    .links a {
-      color: #007bff;
-      text-decoration: none;
-      transition: text-decoration 0.2s;
-    }
-    .links a:hover {
-      text-decoration: underline;
-    }
-    .description {
-      font-size: 1rem;
-      color: #555;
-      line-height: 1.5;
-      border-top: 1px solid #eee;
-      padding-top: 20px;
-    }
+    button:hover { background-color: #0056b3; }
+    .links { text-align: center; font-size: 0.9rem; margin-bottom: 25px; }
+    .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
+    .links a:hover { text-decoration: underline; }
+    .description { font-size: 1rem; color: #555; line-height: 1.5; border-top: 1px solid #eee; padding-top: 20px; }
 
-    .phone-input {
-      display: flex;
-      margin-bottom: 18px;
-    }
+    .phone-input { display: flex; margin-bottom: 18px; }
     select.country-code {
-      flex: 0 0 90px;
-      border-radius: 6px 0 0 6px;
-      border: 1px solid #ccc;
-      border-right: none;
-      padding: 10px 8px;
-      font-size: 1rem;
-      background-color: white;
-      cursor: pointer;
-      transition: border-color 0.3s;
-      height: 42px;
+      flex: 0 0 90px; border-radius: 6px 0 0 6px; border: 1px solid #ccc; border-right: none;
+      padding: 10px 8px; font-size: 1rem; background-color: white; cursor: pointer;
+      transition: border-color 0.3s; height: 42px;
     }
     input.local-number {
-      flex: 1;
-      border-radius: 0 6px 6px 0;
-      border: 1px solid #ccc;
-      border-left: none;
-      padding: 10px 12px;
-      font-size: 1rem;
-      height: 42px;
-      box-sizing: border-box;
+      flex: 1; border-radius: 0 6px 6px 0; border: 1px solid #ccc; border-left: none;
+      padding: 10px 12px; font-size: 1rem; height: 42px; box-sizing: border-box;
       transition: border-color 0.3s;
     }
 
-    .birthdate-gender {
-      display: flex;
-      justify-content: space-between;
-      gap: 16px;
-      margin-bottom: 18px;
-    }
-    .birthdate, .gender {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-    .gender select,
-    .birthdate input {
-      padding: 10px;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      margin-top: 6px;
-      cursor: pointer;
-      transition: border-color 0.3s;
-    }
+    .birthdate-gender { display: flex; justify-content: space-between; gap: 16px; margin-bottom: 18px; }
+    .birthdate, .gender { flex: 1; display: flex; flex-direction: column; }
+    .gender select, .birthdate input { padding: 10px; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; margin-top: 6px; cursor: pointer; transition: border-color 0.3s; }
 
-    .name-fields {
-      display: flex;
-      justify-content: space-between;
-      gap: 10px;
-    }
-    .name-fields input {
-      flex: 1;
-    }
-
-    .capitalize {
-      text-transform: uppercase;
-    }
+    .name-fields { display: flex; justify-content: space-between; gap: 10px; }
+    .name-fields input { flex: 1; }
+    .capitalize { text-transform: uppercase; }
 
     @media (max-width: 450px) {
-      .phone-input {
-        flex-direction: column;
-      }
-      select.country-code,
-      input.local-number {
-        flex: none;
-        width: 100%;
-        border-radius: 6px;
-        border-left: 1px solid #ccc;
-        border-right: 1px solid #ccc;
-        height: auto;
-        margin-bottom: 10px;
-      }
-      .birthdate-gender {
-        flex-direction: column;
-      }
-      .name-fields {
-        flex-direction: column;
-      }
+      .phone-input { flex-direction: column; }
+      select.country-code, input.local-number { flex: none; width: 100%; border-radius: 6px; border-left: 1px solid #ccc; border-right: 1px solid #ccc; height: auto; margin-bottom: 10px; }
+      .birthdate-gender { flex-direction: column; }
+      .name-fields { flex-direction: column; }
     }
   </style>
 </head>
@@ -207,7 +107,7 @@
   <div class="container">
     <h1>Register for Attendance System</h1>
 
-    <form action="/register" method="POST">
+    <form id="registerForm">
      
       <label for="username">Username</label>
       <input type="text" id="username" name="username" placeholder="Choose a username" pattern="[a-z0-9]+" title="Only lowercase letters and numbers are allowed" required />
@@ -226,7 +126,7 @@
 
       <label for="phone">Phone Number</label>
       <div class="phone-input">
-        <select name="country-code" class="country-code" required>
+        <select name="country-code" id="country-code" class="country-code" required>
           <option value="+63" selected>PH +63</option>
           <option value="+1">US +1</option>
           <option value="+44">UK +44</option>
@@ -234,7 +134,7 @@
           <option value="+81">JP +81</option>
           <option value="+61">AU +61</option>
         </select>
-        <input type="tel" name="local-number" class="local-number" placeholder="Your phone number" pattern="[0-9]{10,15}" required />
+        <input type="tel" id="local-number" name="local-number" class="local-number" placeholder="Your phone number" pattern="[0-9]{10,15}" required />
       </div>
 
       <div class="birthdate-gender">
@@ -267,5 +167,69 @@
       </div>
     </form>
   </div>
+
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-firestore.js"></script>
+
+  <script>
+    // Initialize Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
+      authDomain: "chronopay-b4267.firebaseapp.com",
+      projectId: "chronopay-b4267",
+      storageBucket: "chronopay-b4267.firebasestorage.app",
+      messagingSenderId: "335594235253",
+      appId: "1:335594235253:web:48c2581cfaabb143731f3c",
+      measurementId: "G-GPY64CKF0Z"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+
+    const registerForm = document.getElementById("registerForm");
+
+    registerForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      const username = document.getElementById("username").value.trim();
+      const firstName = document.getElementById("first-name").value.trim();
+      const middleName = document.getElementById("middle-name").value.trim();
+      const lastName = document.getElementById("last-name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const phone = document.getElementById("country-code").value + document.getElementById("local-number").value.trim();
+      const birthdate = document.getElementById("birthdate").value;
+      const gender = document.getElementById("gender").value;
+      const password = document.getElementById("password").value;
+
+      try {
+        const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+        const user = userCredential.user;
+
+        await db.collection("users").doc(user.uid).set({
+          username,
+          firstName,
+          middleName,
+          lastName,
+          email,
+          phone,
+          birthdate,
+          gender,
+          role: "MEMBER",
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        });
+
+        alert("Registration successful! You can now login.");
+        registerForm.reset();
+        window.location.href = "index.html";
+
+      } catch (error) {
+        console.error(error);
+        alert(error.message);
+      }
+    });
+  </script>
 </body>
 </html>
